# QWERT

./: CMakeLists.txt  QWARRAYS.h  QWERT.h  QWLINEAR_HASHMAP.h  QWLINEAR_MAP.h  QWLINKEDLIST.h  QWMATH.h  QWMATHINTERFACES.h  QWNEURAL.h  QWSAFE_ARRAYS.h  main.cpp
Arrays/: QWSAFE_ARRAYS.h
LinkedList/: QWLINKEDLIST.h  QWLINKEDNODE.h
Math/: QWMATHINTERFACES.h
Misc/: QWLINEAR_MAP.h  SORTING.h
Neural/: n_node.h
